harbor/nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  labels:
    app: nginx
spec:
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - image: nginx:latest
        name: nginx
        ports:
        - containerPort: 8080
          name: tcp-nginx
        volumeMounts:
        - mountPath: "/etc/nginx/templates/default.conf.template"
          subPath: "default.conf"
          name: dockerhub-proxy-nginx
      volumes:
      - name: "dockerhub-proxy-nginx"
        configMap:
          name: dockerhub-proxy-nginx
---
apiVersion: v1
kind: Service
metadata:
  name: nginx
spec:
  selector:
    app: nginx
  type: ClusterIP
  ports:
  - name: nginx
    protocol: TCP
    port: 80
    targetPort: 8080
